update swagger endpoint proxy
